fix: Message data conversion